--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hardhat": "^2.8.3"
   },
   "dependencies": {
+    "@alch/alchemy-web3": "^1.2.3",
     "@openzeppelin/contracts": "^4.4.2",
     "dotenv": "^14.3.2",
     "solc": "^0.8.11"
